Added add business entitties migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "server=exxon-db-server.mariadb.database.azure.com; Port=3306; Database=exxon-redeem-db; Uid=kasem@exxon-db-server; Pwd=abc123!@#;"
   },
   "Logging": {
     "IncludeScopes": false,
